work in progress on landing

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{> head}}
-    <title>Contact Us - Vite + TailwindCSS</title>
+    <title>Contact Us - {{title}}</title>
   </head>
   <body>
     {{> header}}
