--- a/contact/index.html
+++ b/contact/index.html
@@ -244,6 +244,6 @@
 
     {{> footer}}
 
-    <script type="module" src="/src/contact.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
