--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                     <!-- Email Input Row -->
                     <div>
                       <input type="email" id="hero-email" name="email" required placeholder="Enter your email"
-                        class="w-full px-3 py-2 border border-gray-300 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors text-sm bg-gray-50 focus:bg-white">
+                        class="w-full px-3 py-2 border border-blue-800 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors text-sm bg-gray-50 focus:bg-white">
                     </div>
                     
                     <!-- Zip Code and Submit Row -->
                     <div class="flex gap-2">
                       <input type="text" id="hero-zipcode" name="zipcode" required placeholder="Zip" pattern="[0-9]{5}" maxlength="5"
-                        class="flex-1 px-3 py-2 border border-gray-300 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors text-sm bg-gray-50 focus:bg-white">
+                        class="flex-1 px-3 py-2 border border-blue-800 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors text-sm bg-gray-50 focus:bg-white">
                       
                       <button type="submit"
                         class="bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-medium px-4 py-2 rounded-md shadow-sm hover:shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm whitespace-nowrap">
