--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </p>
               
               <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center items-center mb-6">
-                <a href="/donate/" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-4 px-8 rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl min-h-[56px] flex items-center justify-center w-full sm:w-auto">
+                <a href="https://politics.raisethemoney.com/en/acolucci/" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-4 px-8 rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl min-h-[56px] flex items-center justify-center w-full sm:w-auto">
                   <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
                   </svg>
