--- a/issues/index.html
+++ b/issues/index.html
@@ -10,24 +10,30 @@
     <!-- Sticky Header - positioned outside for proper sticky behavior -->
     {{> header}}
 
-    <!-- Hero Section with background that extends behind header -->
-    <section class="relative min-h-screen overflow-hidden -mt-20">
-        <!-- Background Image - extends upward to show behind header -->
-        <div class="absolute inset-0 z-0 -top-20 h-[calc(100%+5rem)]">
-            <img src="https://www.shutterstock.com/shutterstock/photos/1873857973/display_1500/stock-photo-waist-up-portrait-of-confident-african-american-politician-looking-at-camera-while-standing-with-1873857973.jpg"
-                alt="Professional politician at podium" class="w-full h-full object-cover object-[center_20%]" />
-            <!-- Dark overlay for text readability -->
-            <div class="absolute inset-0 bg-gradient-to-r from-gray-800/85 via-gray-800/75 to-gray-700/70"></div>
-        </div>
+    <!-- Fixed Background Image - stays in place while content scrolls -->
+    <div class="fixed inset-0 z-0">
+        <img src="/images/toms-river-wide.webp" alt="Professional politician at podium"
+            class="w-full h-full object-cover object-[center_20%]" />
+        <!-- Dark overlay for text readability -->
+        <div class="absolute inset-0 bg-gradient-to-r from-gray-800/85 via-gray-800/75 to-gray-700/70"></div>
+    </div>
 
-        <!-- Hero Content -->
-        <main class="relative z-10 flex items-center justify-center min-h-screen pt-20">
+    <!-- Hero Section - just the visible viewport height -->
+    <main>
+        <section class="relative">
+            <!-- Hero content would go here -->
+            <div class="relative z-20 pt-20 pb-16">
+                <!-- Hero content like title, subtitle, CTA buttons -->
+            </div>
+        </section>
+    </main>
 
-        </main>
-
+    <!-- Footer - sticky at bottom of viewport -->
+    <div class="fixed bottom-0 left-0 right-0 z-20">
         {{> footer}}
+    </div>
 
-        <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
