--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Learn About Anthony →
               </button>
               <span class="text-gray-300 hidden sm:inline">•</span>
-              <a href="/issues/" class="text-white hover:text-yellow-300 font-semibold text-lg underline decoration-2 underline-offset-4 transition-colors">
+              <a href="../issues/" class="text-white hover:text-yellow-300 font-semibold text-lg underline decoration-2 underline-offset-4 transition-colors">
                 View Platform →
               </a>
             </div>
