--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Learn About Anthony →
               </button>
               <span class="text-gray-300 hidden sm:inline">•</span>
-              <a href="../issues/" class="text-white hover:text-yellow-300 font-semibold text-lg underline decoration-2 underline-offset-4 transition-colors">
+              <a href="issues/" class="text-white hover:text-yellow-300 font-semibold text-lg underline decoration-2 underline-offset-4 transition-colors">
                 View Platform →
               </a>
             </div>
@@ -187,7 +187,7 @@
                   </svg>
                   Donate Now
                 </a>
-                <a href="/volunteer/" class="bg-blue-700 hover:bg-blue-800 text-white font-semibold py-4 px-8 rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl min-h-[56px] flex items-center justify-center w-full sm:w-auto">
+                <a href="volunteer/" class="bg-blue-700 hover:bg-blue-800 text-white font-semibold py-4 px-8 rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl min-h-[56px] flex items-center justify-center w-full sm:w-auto">
                   <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
                   </svg>
