--- a/issues/index.html
+++ b/issues/index.html
@@ -24,17 +24,18 @@
                 <!-- Hero Content -->
                 <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center !py-16 relative">
                     <!-- Four-sided gradient overlay for text darkening -->
-                    <div class="absolute inset-0 pointer-events-none" 
-                         style="background: radial-gradient(ellipse at center, rgba(0,0,0,0.5) 10%, rgba(0,0,0,0) 60%, transparent 100%);"></div>
-                    
+                    <div class="absolute inset-0 pointer-events-none"
+                        style="background: radial-gradient(ellipse at center, rgba(0,0,0,0.5) 10%, rgba(0,0,0,0) 60%, transparent 100%);">
+                    </div>
+
                     <!-- Content with higher z-index to appear above gradient -->
                     <div class="relative z-10">
-                    <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
-                        Our Platform for Toms River
-                    </h1>
-                    <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
-                        Building stronger, more resilient communities across Ward 1 and beyond.
-                    </p>
+                        <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
+                            Our Platform for Toms River
+                        </h1>
+                        <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
+                            Building stronger, more resilient communities across Ward 1 and beyond.
+                        </p>
                     </div>
                 </div>
 
@@ -45,8 +46,7 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 items-start">
                         <!-- Glass Pane Text Content -->
                         <div class="flex flex-col gap-4">
-                            <div
-                                class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+                            <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                                     Storm Recovery & Coastal Resilience
                                 </h2>
@@ -70,8 +70,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div
-                                class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+                            <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                                     Storm Recovery & Coastal Resilience
                                 </h2>
@@ -100,14 +99,79 @@
 
                         <!-- Image Container - Constrained to Left Column Height -->
                         <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
-                            <img src="https://images.unsplash.com/photo-1547036967-23d11aacaee0?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
-                                 alt="Coastal storm recovery efforts" 
-                                 class="w-full max-w-sm h-48 lg:h-full max-h-full object-cover rounded-lg shadow-md">
+                            <img src="/images/dune-grass.jpg" alt="Coastal storm recovery efforts"
+                                class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
                         </div>
                     </div>
 
                 </div>
 
+                <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-12 sm:mt-16 space-y-8 sm:space-y-12">
+
+                    <!-- Glass Pane Around Text Only -->
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 items-start">
+                        <!-- Glass Pane Text Content -->
+                        <div class="flex flex-col gap-4">
+                            <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+                                <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
+                                    Tourism & Beautification
+                                </h2>
+                                <p class="text-base sm:text-lg text-white mb-4 leading-relaxed">
+                                    New Jersey's coastline is our greatest asset and our most vulnerable point. We need
+                                    comprehensive storm recovery programs and forward-thinking resilience
+                                    infrastructure.
+                                </p>
+                                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Enhanced flood protection systems
+                                    </li>
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Streamlined disaster relief funding
+                                    </li>
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Climate-adaptive building codes
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+                                <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
+                                    Tourism & Beautification
+                                </h2>
+                                <p class="text-base sm:text-lg text-white mb-4 leading-relaxed">
+                                    New Jersey's coastline is our greatest asset and our most vulnerable point. We need
+                                    comprehensive storm recovery programs and forward-thinking resilience
+                                    infrastructure.
+                                </p>
+                                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Enhanced flood protection systems
+                                    </li>
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Streamlined disaster relief funding
+                                    </li>
+                                    <li class="flex items-start text-white">
+                                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
+                                        Climate-adaptive building codes
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+                        <!-- Image Container - Constrained to Left Column Height -->
+                        <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
+                            <img src="/images/garden-1-cropped.jpg" alt="Coastal storm recovery efforts"
+                                class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
+                        </div>
+                    </div>
+
+
+                </div>
 
             </div>
         </section>
