--- a/issues/index.html
+++ b/issues/index.html
@@ -99,7 +99,7 @@
 
                         <!-- Image Container - Constrained to Left Column Height -->
                         <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
-                            <img src="/images/dune-grass.jpg" alt="Coastal storm recovery efforts"
+                            <img src="/images/dune-grass.jpg" alt="Coastal dune grass in Toms River, representing storm recovery and environmental resilience efforts"
                                 class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
                         </div>
                     </div>
@@ -165,7 +165,7 @@
 
                         <!-- Image Container - Constrained to Left Column Height -->
                         <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
-                            <img src="/images/garden-1-cropped.jpg" alt="Coastal storm recovery efforts"
+                            <img src="/images/garden-1-cropped.jpg" alt="Beautiful community garden in Toms River Ward 1, showcasing tourism and neighborhood beautification efforts"
                                 class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
                         </div>
                     </div>
