--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
       <!-- Background Image - extends upward to show behind header -->
       <div class="absolute inset-0 z-0 -top-20 h-[calc(100%+5rem)]">
         <img 
-          src="https://www.shutterstock.com/shutterstock/photos/1873857973/display_1500/stock-photo-waist-up-portrait-of-confident-african-american-politician-looking-at-camera-while-standing-with-1873857973.jpg" 
+          src="/images/toms-river-shot.jfif" 
           alt="Anthony Colucci, candidate for Toms River Ward 1 Council, standing confidently at campaign podium" 
           class="w-full h-full object-cover object-[center_20%]"
         />
         <!-- Dark overlay for text readability -->
-        <div class="absolute inset-0 bg-gradient-to-r from-gray-800/85 via-gray-800/75 to-gray-700/70"></div>
+        <div class="absolute inset-0 bg-gradient-to-r from-gray-800/85 via-gray-800/75 to-gray-800/70"></div>
       </div>
 
       <!-- Hero Content -->
@@ -88,7 +88,7 @@
             </p>
             
             <!-- Campaign Description -->
-            <p class="text-lg sm:text-xl lg:text-2xl mb-12 text-blue-100 leading-relaxed max-w-3xl mx-auto drop-shadow-lg">
+            <p class="text-lg sm:text-xl lg:text-2xl mb-12 text-white font-bold leading-relaxed max-w-3xl mx-auto drop-shadow-lg">
               {{experience}} bringing proven leadership and community-focused solutions to Ward 1
             </p>
             
