change CRM to link, update Issues copy

--- a/issues/index.html
+++ b/issues/index.html
@@ -42,31 +42,30 @@
                 <!-- Issues Content with Glass Pane Effects -->
                 <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-12 sm:mt-16 space-y-8 sm:space-y-12">
 
-                    <!-- Storm Recovery Section - Glass Pane Around Text Only -->
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 items-start">
                         <!-- Glass Pane Text Content -->
                         <div class="flex flex-col gap-4">
                             <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
-                                    Storm Recovery & Coastal Resilience
+                                    Property Tax Relief
                                 </h2>
                                 <p class="text-base sm:text-lg text-white mb-4 leading-relaxed">
-                                    New Jersey's coastline is our greatest asset and our most vulnerable point. We need
-                                    comprehensive storm recovery programs and forward-thinking resilience
-                                    infrastructure.
+                                    We are all feeling the squeeze of rising costs and local property taxes are no help
+                                    to our budgets. We need to keep costs down, I will use my decades of experience in
+                                    Finance to keep prices in check and work for tax relief.
                                 </p>
                                 <ul class="space-y-2 text-sm sm:text-base text-white-700">
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Enhanced flood protection systems
+                                        Keep costs down
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Streamlined disaster relief funding
+                                        Secure tax relief
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Climate-adaptive building codes
+                                        Curb spending
                                     </li>
                                 </ul>
                             </div>
@@ -99,7 +98,8 @@
 
                         <!-- Image Container - Constrained to Left Column Height -->
                         <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
-                            <img src="/images/dune-grass.jpg" alt="Coastal dune grass in Toms River, representing storm recovery and environmental resilience efforts"
+                            <img src="/images/dune-grass.jpg"
+                                alt="Coastal dune grass in Toms River, representing storm recovery and environmental resilience efforts"
                                 class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
                         </div>
                     </div>
@@ -114,49 +114,48 @@
                         <div class="flex flex-col gap-4">
                             <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
-                                    Tourism & Beautification
+                                    Transparency in Local Government
                                 </h2>
                                 <p class="text-base sm:text-lg text-white mb-4 leading-relaxed">
-                                    New Jersey's coastline is our greatest asset and our most vulnerable point. We need
-                                    comprehensive storm recovery programs and forward-thinking resilience
-                                    infrastructure.
+                                    Now more than ever we need transparency in all levels of government especially at
+                                    the local level. We need to make our meetings more accessible, not less.
                                 </p>
                                 <ul class="space-y-2 text-sm sm:text-base text-white-700">
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Enhanced flood protection systems
+                                        Move the council meeting back to 6pm
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Streamlined disaster relief funding
+                                        Be responsive to OPRA requests
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Climate-adaptive building codes
+                                        Abide by the Sun Shine Law
                                     </li>
                                 </ul>
                             </div>
                             <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
-                                    Tourism & Beautification
+                                    Check Overdevelopment
                                 </h2>
                                 <p class="text-base sm:text-lg text-white mb-4 leading-relaxed">
-                                    New Jersey's coastline is our greatest asset and our most vulnerable point. We need
-                                    comprehensive storm recovery programs and forward-thinking resilience
-                                    infrastructure.
+                                    My time on the Zoning Board of Adjustment has shown that I take seriously the
+                                    problems of Overdevelopment. We need to keep our small town feel and I will continue
+                                    this fight on the Council.
                                 </p>
                                 <ul class="space-y-2 text-sm sm:text-base text-white-700">
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Enhanced flood protection systems
+                                        Stick to the Master Plan
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Streamlined disaster relief funding
+                                        Be judicious in variance allocation
                                     </li>
                                     <li class="flex items-start text-white">
                                         <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
-                                        Climate-adaptive building codes
+                                        Stop Four-Story and up buildings
                                     </li>
                                 </ul>
                             </div>
@@ -165,7 +164,8 @@
 
                         <!-- Image Container - Constrained to Left Column Height -->
                         <div class="lg:h-0 lg:min-h-full flex items-center justify-center">
-                            <img src="/images/garden-1-cropped.jpg" alt="Beautiful community garden in Toms River Ward 1, showcasing tourism and neighborhood beautification efforts"
+                            <img src="/images/garden-1-cropped.jpg"
+                                alt="Beautiful community garden in Toms River Ward 1, showcasing tourism and neighborhood beautification efforts"
                                 class="w-full md:max-w-md lg:h-full max-h-full object-cover rounded-lg shadow-md">
                         </div>
                     </div>
