--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                           <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"/>
                         </svg>
                       </div>
-                      <span class="text-gray-600">Community Organizer</span>
+                      <span class="text-gray-600">Over 40 Year in Finance</span>
                     </div>
                     
                     <div class="flex items-start space-x-3">
