--- a/issues/index.html
+++ b/issues/index.html
@@ -34,7 +34,7 @@
                             Our Platform for Toms River
                         </h1>
                         <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
-                            Building stronger, more resilient communities across Ward 1 and beyond.
+                            Building stronger, more resilient communities across Ward 1.
                         </p>
                     </div>
                 </div>
