--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 max-w-2xl mx-auto mb-12">
               <!-- Left Column: Donate Now and Register to Vote -->
               <div class="flex flex-col gap-4 flex-1">
-                <a href="https://secure.actblue.com/donate/bennett-assembly" class="group bg-red-600 hover:bg-red-700 text-white font-bold py-5 px-10 rounded-lg text-xl shadow-2xl transition-colors duration-300 flex items-center justify-center">
+                <a href="https://politics.raisethemoney.com/en/lbennettQz0cN3QQlvIxF2wDZpH3yA" class="group bg-red-600 hover:bg-red-700 text-white font-bold py-5 px-10 rounded-lg text-xl shadow-2xl transition-colors duration-300 flex items-center justify-center">
                   <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
                   </svg>
