--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               
               <!-- Right Column: Join Lisa -->
               <div class="flex flex-col gap-4 flex-1">
-                <a href="https://forms.gle/TxC79mS6ua4sQQG77" class="group bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 px-10 rounded-lg text-xl shadow-2xl transition-colors duration-300 flex items-center justify-center">
+                <a href="https://forms.gle/fsD1gwH5ULkb575S6" class="group bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 px-10 rounded-lg text-xl shadow-2xl transition-colors duration-300 flex items-center justify-center">
                   Join Lisa
                   <svg class="w-6 h-6 ml-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
