--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -2,52 +2,189 @@
 <html lang="en">
 
 <head>
-    {{> head}}
-    <title>{{title}}</title>
+  {{> head}}
+  <title>{{title}}</title>
 </head>
 
 <body>
-    <!-- Sticky Header - positioned outside for proper sticky behavior -->
-    {{> header}}
+  <!-- Sticky Header - positioned outside for proper sticky behavior -->
+  {{> header}}
 
-    <!-- Fixed Background Image - stays in place while content scrolls -->
-    <div class="fixed inset-0 z-0">
-        <img src="/images/toms-river-wide.webp" alt="Professional politician at podium"
-            class="w-full h-full object-cover object-[center_20%]" />
-        <!-- Dark overlay for text readability -->
-        <div class="absolute inset-0 bg-gradient-to-r from-gray-800/85 via-gray-800/75 to-gray-700/70"></div>
-    </div>
+  <!-- Fixed Background Image - stays in place while content scrolls -->
+  <div class="fixed inset-0 z-0">
+    <!-- Dark overlay for text readability -->
+    <div class="absolute inset-0 bg-blue-900"></div>
+  </div>
 
-    <main class="mb-12">
-        <section class="relative">
-            <div class="relative z-20 pt-20 pb-16">
-                <!-- Hero Content -->
-                <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center !py-16 relative">
-                    <!-- Four-sided gradient overlay for text darkening -->
-                    <div class="absolute inset-0 pointer-events-none" 
-                         style="background: radial-gradient(ellipse at center, rgba(0,0,0,0.5) 10%, rgba(0,0,0,0) 60%, transparent 100%);"></div>
-                    
-                    <!-- Content with higher z-index to appear above gradient -->
-                    <div class="relative z-10">
-                    <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
-                        Endorsements
-                    </h1>
-                    <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
-                        Under Construction
-                    </p>
-                    </div>
-                </div>
+  <main class="mb-12">
+    <section class="relative">
+      <div class="relative z-20 pt-20 pb-16">
+        <!-- Hero Content -->
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center !py-16 relative">
 
-            </div>
-        </section>
-    </main>
+          <!-- Content with higher z-index to appear above gradient -->
+          <div class="relative z-10">
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
+              Endorsements
+            </h1>
+            <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
+              Lisa is proudly endorsed by these prestigious groups:
+            </p>
+          </div>
+        </div>
 
-    <!-- Footer - appears above the fixed background -->
-    <div class="relative z-30">
-        {{> footer}}
-    </div>
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-12 sm:mt-16">
+          <!-- Responsive Card Grid: 1 column mobile, 2 columns tablet, 3 columns desktop -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
 
-    <script type="module" src="/src/main.js"></script>
+            <!-- Health Professionals and Allied Employees Card -->
+            <a href="https://www.hpae.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/HPAE.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Health Professionals and Allied Employees (HPAE)
+              </h3>
+              <p class="text-white/80 text-sm">
+                Supporting healthcare workers and quality patient care across New Jersey.
+              </p>
+            </a>
+
+            <!-- American Federation of Teachers Card -->
+            <a href="https://www.aft.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/AFTNJ-logo.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                American Federation of Teachers (AFTNJ)
+              </h3>
+              <p class="text-white/80 text-sm">
+                Advocating for educators and quality public education in New Jersey.
+              </p>
+            </a>
+
+            <!-- New Jersey State AFL-CIO Card -->
+            <a href="https://njaflcio.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
+                <img class="bg-gray-600" src="/images/endorsement-logos/AFLCIO.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                New Jersey State AFL-CIO
+              </h3>
+              <p class="text-white/80 text-sm">
+                Fighting for working families and labor rights across New Jersey.
+              </p>
+            </a>
+
+            <!-- Moms Against Gun Violence Card -->
+            <a href="https://momsdemandaction.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/MomsDemandAction.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Moms Against Gun Violence
+              </h3>
+              <p class="text-white/80 text-sm">
+                Working to end gun violence and create safer communities for all families.
+              </p>
+            </a>
+
+            <!-- PAM's List Card -->
+            <a href="https://www.facebook.com/p/PAMS-List-100068135709525/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/Pamslist.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                PAM's List
+              </h3>
+              <p class="text-white/80 text-sm">
+                Supporting progressive women candidates in New Jersey politics.
+              </p>
+            </a>
+
+            <!-- Planned Parenthood Card -->
+            <a href="https://www.plannedparenthood.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                 <img src="/images/endorsement-logos/pp-endorsed.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Planned Parenthood
+              </h3>
+              <p class="text-white/80 text-sm">
+                Protecting reproductive rights and healthcare access for all.
+              </p>
+            </a>
+
+            <!-- Manchester Township Democratic Club Card -->
+            <a href="https://manchesterdems.com/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/manchester-dems.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Manchester Township Democratic Club
+              </h3>
+              <p class="text-white/80 text-sm">
+                Local Democratic organization supporting progressive candidates and values.
+              </p>
+            </a>
+
+            <!-- Democratic Club of Stafford Township Card -->
+            <a href="https://staffordnjdems.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
+                <img src="/images/endorsement-logos/Stafford_Dem_Logo.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Democratic Club of Stafford Township
+              </h3>
+              <p class="text-white/80 text-sm">
+                Community organization promoting Democratic values and local engagement.
+              </p>
+            </a>
+
+            <!-- Ocean County Democratic Committee Card -->
+            <a href="https://www.oceancountydems.org/" target="_blank" rel="noopener noreferrer"
+              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
+                 <img src="/images/endorsement-logos/Blue_Logo_Final.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+                Ocean County Democratic Committee
+              </h3>
+              <p class="text-white/80 text-sm">
+                The official Democratic Party organization for Ocean County, New Jersey.
+              </p>
+            </a>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer - appears above the fixed background -->
+  <div class="relative z-30">
+    {{> footer}}
+  </div>
+
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
