--- a/issues/index.html
+++ b/issues/index.html
@@ -10,25 +10,17 @@
   <!-- Sticky Header - positioned outside for proper sticky behavior -->
   {{> header}}
 
-  <!-- Fixed Background Image - stays in place while content scrolls -->
-  <div class="fixed inset-0 z-0">
-    <!-- <img src="/images/toms-river-wide.webp" alt="Professional politician at podium"
-            class="w-full h-full object-cover object-[center_20%]" /> -->
-    <!-- Dark overlay for text readability -->
-    <div class="absolute inset-0 bg-blue-900"></div>
-  </div>
-
   <main class="mb-12">
     <section class="relative">
       <div class="relative z-20 pt-20 pb-16">
         <!-- Hero Content -->
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center !py-16 relative">
           <!-- Content with higher z-index to appear above gradient -->
-          <div class="relative z-10">
-            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
+          <div class="relative z-10 text-blue-900">
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-4 sm:mb-6">
               Our Platform for Ocean County
             </h1>
-            <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
+            <p class="text-lg sm:text-xl max-w-3xl font-bold mx-auto leading-relaxed">
               Building stronger, more resilient communities across Legislative District 9.
             </p>
           </div>
@@ -40,11 +32,11 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 items-start">
             <!-- Glass Pane Text Content -->
             <div class="flex flex-col gap-4">
-              <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+              <div class="bg-blue-900 backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                   Communication and Transparency in Government
                 </h2>
-                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                <ul class="space-y-2 text-white-700">
                   <li class="flex items-start text-white">
                     <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
                     Enhance access to essential services for seniors, families, and small businesses.
@@ -60,11 +52,11 @@
                   </li>
                 </ul>
               </div>
-              <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+              <div class="bg-blue-900 backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                   Protecting Our Environment and Building a Resilient Future
                 </h2>
-                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                <ul class="space-y-2 text-white-700">
                   <li class="flex items-start text-white">
                     <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
                     Support legislation that safeguards our waterways from the impacts of coastal storms.
@@ -103,11 +95,11 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 items-start">
             <!-- Glass Pane Text Content -->
             <div class="flex flex-col gap-4">
-              <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+              <div class="bg-blue-900 backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                   School Funding Reform
                 </h2>
-                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                <ul class="space-y-2 text-white-700">
                   <li class="flex items-start text-white">
                     <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
                     Back legislation that holds school districts accountable for responsible and transparent spending.
@@ -127,11 +119,11 @@
                   </li>
                 </ul>
               </div>
-              <div class="backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
+              <div class="bg-blue-900 backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 sm:p-8">
                 <h2 class="text-2xl sm:text-3xl font-bold text-white mb-4">
                   Fair Utility Rates & Real Accountability
                 </h2>
-                <ul class="space-y-2 text-sm sm:text-base text-white-700">
+                <ul class="space-y-2 text-white-700">
                   <li class="flex items-start text-white">
                     <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mt-1 mr-3"></span>
                     Improve transparency in how utilities operate and spend ratepayer money.
