fix sticky scroll

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <main>
     <!-- Hero Section with Two Columns - extends behind header -->
-    <section class="min-h-screen flex -mt-20 pt-20 md:-mt-16 md:pt-16">
+    <section class="min-h-screen flex -mt-20 md:-mt-16 ">
       <!-- Left Column - Dark Green Background with Text -->
       <div class="w-full lg:w-1/2 bg-green-800 flex items-center justify-center relative">
         <div class="max-w-lg px-8 sm:px-12 lg:px-16 text-center lg:text-left">
